fixed portrait ratio, visible color for header font, backgroundimg not loading

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -3,14 +3,18 @@ header {
 	font-family: Arial, sans-serif;
 	margin-bottom: 20px;
 	margin-top: 20px;
-	text-shadow: 0 -1px 0 rgba(0, 0, ,0.25);
-	color: rgba(250, 250, 250, .9);
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+	color: rgba(128, 8, 226, 1);
 }
 
 #selfp {
 	height: 150px;
 	width: 150px;
-	float: right;
-	margin-left: 20px;
-	margin-bottom: 20px;
+}
+
+body {
+	background-image: url("static/images/home_background.jpg");
+	background-attachment: fixed;
+	background-size: cover;
+	color: rgba(250, 250, 250, .8);
 }
